--- a/ApacheKafka_Project1/KafkaProducer.ipynb
+++ b/ApacheKafka_Project1/KafkaProducer.ipynb
@@ -9,8 +9,7 @@
     "import time\n",
     "from json import dumps\n",
     "from kafka import KafkaProducer \n",
-    "import pandas as pd\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -21,7 +20,7 @@
    "source": [
     "def CreateFirstKafkaProducer():\n",
     "    localhost = 'localhost:9092'\n",
-    "    return KafkaProducer(bootstrap_servers=[localhost], value_serializer=lambda x: dumps(x).encode('utf-8'))\n"
+    "    return KafkaProducer(bootstrap_servers=[localhost], value_serializer=lambda x: dumps(x).encode('utf-8'))"
    ]
   },
   {
@@ -255,7 +254,7 @@
    ],
    "source": [
     "def create_df():\n",
-    "    Path = r'C:\\My commercial projects\\Data Engineering Projects\\Apache Kafka\\ufc_champs_final_ApacheKafka.csv'\n",
+    "    Path = r'C:\\My projects\\ApacheKafka_Projects\\ApacheKafka_Project1\\ufc_champs_final_ApacheKafka.csv'\n",
     "    df = pd.read_csv(Path)\n",
     "    df = df[['weightclass','R_fighter','B_fighter','date','location','country','title_bout']]\n",
     "\n",
@@ -263,7 +262,7 @@
     "    return df \n",
     "\n",
     "df = create_df()\n",
-    "df \n"
+    "df "
    ]
   },
   {
@@ -321,7 +320,7 @@
     "    \n",
     "    localhost = 'localhost:9092'\n",
     "\n",
-    "    return KafkaProducer(bootstrap_servers=[localhost], value_serializer=lambda x: dumps(x).encode('utf-8'))\n"
+    "    return KafkaProducer(bootstrap_servers=[localhost], value_serializer=lambda x: dumps(x).encode('utf-8'))"
    ]
   },
   {
@@ -350,7 +349,7 @@
     "        \n",
     "    \n",
     "\n",
-    "PublishingMessage()   \n"
+    "PublishingMessage()   "
    ]
   },
   {
@@ -370,8 +369,7 @@
     "    producer = create_kafka_producer()\n",
     "    return producer.flush()\n",
     "\n",
-    "ProducerFlush()\n",
-    "\n"
+    "ProducerFlush()"
    ]
   }
  ],
